--- a/Arts-Crafts/index.html
+++ b/Arts-Crafts/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Dasmoto's Arts & Crafts</h1>
         <div>
-            <h2 id ="brushes">Bbrushes</h2>
+            <h2 id ="brushes">Brushes</h2>
             <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/hacksaw.jpeg"/>
               <h4>Hacksaw Brushes</h4>
                 <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes.<text class="price"> Starting at $3.00 / brush.</></p>
